--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -526,11 +526,14 @@ BODY {
                         background: url(images/grading/dot-h.png) 0 bottom repeat-x;
                       }
 
-                      .dotted-h{
+                      .dotted-h, .dotted-h>DIV.value{
                         font-size: 14px;
                         margin-right: 1px;
                         height: 47px;
                         line-height: 46px;
+                      }
+
+                      .dotted-h{
                         position: relative;
 
                         &.grade-value{
@@ -714,7 +717,7 @@ BODY {
                         position: relative;
 
                         .ann-button{
-                          width: 76px;
+                          width: 70px;
                           line-height: 35px;
                           border: 1px solid #b3b3b3;
                           @include border-radius(4px);
@@ -726,8 +729,10 @@ BODY {
                           text-decoration: none;
                           color: #3d3d3d;
                           text-shadow: 1px 1px 0 white;
-                          padding: 9px 0;
+                          padding: 9px 3px;
                           margin: 7px auto;
+                          overflow: hidden;
+                          text-overflow: ellipsis;
 
                           &:hover{
                             @include background(linear-gradient(top, #e5e5e5, #d0d0d0));
