update grading pages

--- a/Chalkable.Web/assets/jade/activities/grading/GradingClassSummaryPart.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingClassSummaryPart.jade
@@ -1,7 +1,8 @@
 .mps-container
     each item,i in self.getItems()
-        div(class=(i==0) ? "open" : "", data-index=i).marking-period-container
-            div(data-tooltip=(item.getAvg() != null ? Msg.Avg + " " + item.getAvg() : 'No grades yet')).mp-title=Msg.Grading_Period + ' ' +  item.getGradingPeriod().getName()
+        gradingPeriod = item.getGradingPeriod()
+        div(class=(gradingPeriod.getId() == self.getGradingPeriodId()) ? "open" : "", data-index=i).marking-period-container
+            div(data-tooltip=(item.getAvg() != null ? Msg.Avg + " " + item.getAvg() : 'No grades yet')).mp-title=Msg.Grading_Period + ' ' +  gradingPeriod.getName()
                 .collapse
             .mp-data
                 .ann-types-container
