--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -549,7 +549,7 @@ BODY {
                             z-index: 2;
                           }
 
-                          &.letter{
+                          .letter{
                             font-style: italic;
                             font-family: Georgia;
                           }
