--- a/Chalkable.Web/assets/jade/activities/grading/GradingInput.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingInput.jade
@@ -14,6 +14,9 @@
             +Hidden('dropped', self.isDropped())
         +LabeledCheckbox(Msg.Late, 'islate', self.isLate())(data-value=self.isLate(), id='islate' + self.getId().valueOf()).with-value
         +LabeledCheckbox(Msg.Incomplete, 'isincomplete', self.isIncomplete())(data-value=self.isIncomplete(), id='isincomplete' + self.getId().valueOf()).with-value
-        +LabeledCheckbox(Msg.Exempt, 'isexempt', self.isExempt())(data-value=self.isExempt(), id='isexempt' + self.getId().valueOf()).with-value
+        if self.isAbleExemptStudentScore()
+            +LabeledCheckbox(Msg.Exempt, 'isexempt', self.isExempt())(data-value=self.isExempt(), id='isexempt' + self.getId().valueOf()).with-value
+        else
+            +Hidden('isexempt', self.isExempt())
         +LabeledCheckbox(Msg.Absent, 'isabsent', self.isAbsent())(data-value=self.isAbsent(), id='isabsent' + self.getId().valueOf()).with-value
         +LabeledCheckbox(Msg.Fill, 'fill', false).fill-grade
