fixed private message sending

--- a/Chalkable.Web/assets/sass/partials/controls/_autocomplete.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_autocomplete.scss
@@ -4,6 +4,7 @@
   background: #fff;
   box-shadow: 0 4px 5px rgba(0,0,0,.15);
   border-radius: 0 0 4px 4px;
+  z-index: 100000 !important;
 
   li{
     a{
