fixed set Exempt in Announcemeny/view

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
@@ -57,6 +57,7 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                             userRole = self.getUserRole()
                             maxScore = self.getMaxScore()
                             ableDropStudentScore = self.isAbleDropStudentScore()
+                            ableToExempt = self.isAbleToExempt()
                         )
         .attachments-container.z-10
             .attachments-container-2
