--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -75,5 +75,6 @@ mixin AnnouncementTooltip()
                         owner = self.getOwner(),
                         announcementId = self.getId(),
                         maxScore = self.getMaxScore(),
-                        ableDropStudentScore = self.isAbleDropStudentScore()
+                        ableDropStudentScore = self.isAbleDropStudentScore(),
+                        ableToExempt = self.isAbleToExempt()
                     )
