--- a/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
@@ -14,7 +14,7 @@ div(class="selected " + itemCls, rowIndex=i, recId=self.getId()).i-b
                 value=normalValue,
                 name="gradevalue",
                 data-value=normalValue,
-                class=self.getGradeInputClass()
+                class="validate[required,min[0]] " + self.getGradeInputClass()
                 data-id=self.getId().valueOf()
             ).no-padding.grade-input.grade-autocomplete.grey-input
             .letters 0 - #{self.getMaxScore()}
@@ -28,5 +28,8 @@ div(class="selected " + itemCls, rowIndex=i, recId=self.getId()).i-b
                 +Hidden('isabsent', self.isAbsent())
                 +LabeledCheckbox(Msg.Late, 'islate', self.isLate())(data-value=self.isLate(), id='islate-' + id).with-value
                 +LabeledCheckbox(Msg.Incomplete, 'isincomplete', self.isIncomplete())(data-value=self.isIncomplete(), id='isincomplete-' + id).with-value
-                +LabeledCheckbox(Msg.Exempt, 'isexempt', self.isExempt())(data-value=self.isExempt(), id='isexempt-' + id).with-value
+                if self.isAbleToExempt()
+                    +LabeledCheckbox(Msg.Exempt, 'isexempt', self.isExempt())(data-value=self.isExempt(), id='isexempt-' + id).with-value
+                else
+                    +Hidden('isexempt', self.isExempt())
                 +LabeledCheckbox(Msg.Fill, 'fill', false).fill-grade
